# LiteVideoPlayer

./: .gitignore  CMakeLists.txt  LICENSE  LVP.MD  README.MD
doc/: hwaccel.MD  module.MD  option.MD
lvpBase/: lvpBase.sln
lvpBase/lvpBase/: lvpBase.c  lvpBase.cpp  lvpBase.vcxproj
lvpBase/lvpBaseType/: lvpBaseType.vcxproj  lvp_baseTypes.h  lvp_mutex.c  lvp_mutex.h  lvp_platform.h  lvp_queue.c  lvp_queue.h  lvp_stack.c  lvp_stack.h
python/: main.py
qt/build-render-Desktop_Qt_5_14_0_GCC_64bit-Debug/: Makefile  ui_mainwindow.h
qt/render/: .qmake.stash  lvp_qt_render.cpp  lvp_qt_render.h  mainwindow.cpp  mainwindow.ui  render.pro  render.vcxproj  render.vcxproj.filters
qt/render/debug/: moc_lvp_qt_render.cpp
src/cache/: lvp_cache_module.c  lvp_cache_module.h
src/core/: lvp.c  lvp.h  lvp_array.h  lvp_avsync.c  lvp_avsync.h  lvp_condition.c  lvp_condition.h  lvp_config.h  lvp_core.c  lvp_core.h  lvp_cpp.cc  lvp_cpp.h  lvp_define.h  lvp_dynamic_help.h  lvp_error.h  lvp_event.c  lvp_event.h  lvp_events.h  lvp_linux_config.h  lvp_list.c  lvp_list.h  lvp_log.c  lvp_log.h  lvp_map.c  lvp_map.h  lvp_mem.h  lvp_module.c  lvp_module.h  lvp_modules.h  lvp_mutex.c  lvp_mutex.h  lvp_nqueue.c  lvp_nqueue.h  lvp_queue.c  lvp_queue.h  lvp_semaphore.c  lvp_semaphore.h  lvp_stack.c  lvp_stack.h  lvp_str.c  (+6 more)
src/decoder/: lvp_decoder.c  lvp_decoder.h  lvp_hwaccel.c  lvp_hwaccel.h  lvp_hwaccel_decoder.c  lvp_hwaccel_decoder.h
src/filter/: lvp_audio_resample.c  lvp_audio_tempo_filter.c  lvp_frame_filter.c  lvp_frame_filter.h  lvp_pkt_filter.c  lvp_pkt_filter.h  lvp_play_start_on_time.c
src/reader/: lvp_reader_module.c  lvp_reader_module.h
src/render/: lvp_audio_render.c  lvp_audio_render.h  lvp_video_render.c  lvp_video_render.h
src/test/: testhelp.h
src/test/lvp_core_test/: CMakeLists.txt  core_test.c
src/test/lvp_dynamic_test/: CMakeLists.txt  test.c
src/test/lvp_event_test/: CMakeLists.txt  event_test.c
src/test/lvp_list_test/: CMakeLists.txt  lvp_list_test.c
src/test/lvp_log_test/: CMakeLists.txt  log_test.c
src/test/lvp_map_test/: CMakeLists.txt  map_test.c
src/test/lvp_queue_test/: CMakeLists.txt  lvp_queue_test.c
src/test/lvp_str_test/: CMakeLists.txt  str_test.c
